@@ -51,10 +51,10 @@
 
 
 
-#define SCM_VECTORP(x) (SCM_NIMP(x) && (SCM_TYP7S(x)==scm_tc7_vector))
-#define SCM_NVECTORP(x) (!SCM_VECTORP(x))
-#define SCM_VELTS(x) ((SCM *)SCM_CDR(x))
-#define SCM_VELTS_AS_STACKITEMS(x) ((SCM_STACKITEM *)SCM_CDR(x))
+#define SCM_VECTORP(x) (SCM_NIMP (x) && (SCM_TYP7S (x) == scm_tc7_vector))
+#define SCM_NVECTORP(x) (!SCM_VECTORP (x))
+#define SCM_VELTS(x) ((SCM *) SCM2PTR (SCM_CDR (x)))
+#define SCM_VELTS_AS_STACKITEMS(x) ((SCM_STACKITEM *) SCM2PTR (SCM_CDR (x)))
 #define SCM_SETVELTS SCM_SETCDR
 
 
